--- a/h5.html
+++ b/h5.html
@@ -13,7 +13,7 @@
     <input type="file" id="file" />
   </div>
   <div id="container" style="display: flex;">
-    <canvas id="c" width="500" height="300"></canvas>
+    <canvas id="c" width="500" height="300">您的浏览器不支持canvas</canvas>
     <div>
       <span>上侧</span><br/>
       <input id="topText" type="text"><br/>
