--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Resume</title>
   <!-- Load the page styles. -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/resume_style.css" rel="stylesheet">
   <script src="js/jQuery.js"></script>
   <script src="js/helper.js"></script>
   <!--
