--- a/h5.html
+++ b/h5.html
@@ -25,29 +25,45 @@
       <span>下侧文字</span>
       <input id="bottomText" class="btn-block" type="text">
       <button id="saveButton" class="btn btn-info btn-block">保存</button>
+      <p><br>H5表情包生成器ver. AlphaOo 0.1</p>
     </div>
     <canvas id="c" class="col-md-9 col-xs-12" width="960" height="480">您的浏览器不支持canvas</canvas>
   </div>
 
-  <h4 class="">瀑布流图库</h4>
+  <h4 class="">选择图片</h4>
   <!-- ul.class有padding影响 span无换行 -->
-  <div id="memeGallery" class="grid row">
+  <div id="memeGallery" class="grid row text-center">
     <div class="grid-item col-md-3 col-xs-4">
-      <img class="img-responsive" src="pic/1.jpg" alt="">
+      <img class="img-responsive" src="pic/meme1.jpg" alt="">
+      <p>尔康</p>
+    </div>
+    <div class="grid-item col-md-3 col-xs-4">
+      <img class="img-responsive" src="pic/meme2.jpg" alt="">
+      <p>病娇</p>
+    </div>
+    <div class="grid-item col-md-3 col-xs-4">
+      <img class="img-responsive" src="pic/meme3.jpg" alt="">
+      <p>一个岛</p>
+    </div>
+    <div class="grid-item col-md-3 col-xs-4">
+      <img class="img-responsive" src="pic/meme4.jpg" alt="">
+      <p>国宝</p>
+    </div>
+    <div class="grid-item col-md-3 col-xs-4">
+      <img class="img-responsive" src="pic/meme5.png" alt="">
+      <p>梁日天</p>
+    </div>
+    <div class="grid-item col-md-3 col-xs-4">
+      <img class="img-responsive" src="pic/me1.jpg" alt="">
       <p>222</p>
     </div>
     <div class="grid-item col-md-3 col-xs-4">
-      <img class="img-responsive" src="pic/2.jpg" alt="">
+      <img class="img-responsive" src="pic/me2.jpg" alt="">
       <p>333</p>
     </div>
-
     <div class="grid-item col-md-3 col-xs-4">
-      <img class="img-responsive" src="pic/1.jpg" alt="">
-      <p>222</p>
-    </div>
-    <div class="grid-item col-md-3 col-xs-4">
-      <img class="img-responsive" src="pic/2.jpg" alt="">
-      <p>333</p>
+      <img class="img-responsive" src="pic/meme.png" alt="">
+      <p>亲爱的“安德烈”</p>
     </div>
   </div>
 
