--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-               <li><a href="#">1. UI原型</a></li>
+               <li class="disabled"><a href="#">1. UI原型</a></li>
                <li><a href="h5.html">2. 表情包生成器</a></li>
                <li><a href="#">3. 个人简历</a></li>
                <li class="divider"></li>
@@ -130,9 +130,9 @@
     </div>
     <div class="listItem col-md-4 col-xs-6">
       <a href="#" class="" data-toggle="modal" data-target="#project2">
-        <img class="img-responsive img-thumbnail" src="http://placehold.it/300x150" alt="second project">
+        <img class="img-responsive img-thumbnail" src="pic/2.png" alt="second project">
       </a>
-      <h4>HTML5表情包生成器</h4>
+      <h4>H5表情包生成器</h4>
       <a>http://github.com/..</a>
     </div>
     <div class="listItem col-md-4 col-xs-6">
@@ -147,14 +147,14 @@
   <!-- 页脚 -->
   <footer id="" class="footer">
     <div class="row text-center">
-      <hr>
       <div class="col-md-12">
+        <hr>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing.
         </p>
       </div>
       <div class="col-md-12">
-        <span class="author" itemprop="copyrightHolder">Copyright - 2016 | except the icons | GBA</span>
+        <span class="author" itemprop="copyrightHolder">Copyright @2016 | All Right Reserved | GBA</span>
       </div>
     </div>
   </footer>
@@ -164,11 +164,11 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModadl1">Favorite App Page</h4>
+          <h4 class="modal-title" id="myModadl1">UI原型构建</h4>
         </div>
         <div class="modal-body">
           <img class="img-responsive center-block" src="pic/1b.png">
-          This was my first project in this class. I learned a lot about HTML and CSS.
+          <p>将PDF、PSD格式的设计图，用标准HTML5、CSS构建为UI原型。使用了Bootstrap框架进行排版、jQuery提供交互功能，以PC端浏览为主，也为移动端提供了一定的响应式兼容性。</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -181,11 +181,11 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModal2">222</h4>
+          <h4 class="modal-title" id="myModal2">HTML5实践</h4>
         </div>
         <div class="modal-body">
-          <img class="img-responsive center-block" src="http://placehold.it/300x200">
-          This was my 2 project in this class. I learned a lot about HTML and CSS.
+          <img class="img-responsive center-block" src="pic/2b.png">
+          <p>使用HTML5的canvas为图片添加文字，支持导出与下载。使用masonry js库，配合Bootstrap实现瀑布流图库布局，提供一些原图。</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
