--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Portfolio</title>
+  <title>关于我</title>
   <link href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
   <script src="http://apps.bdimg.com/libs/jquery/2.0.0/jquery.min.js"></script>
   <script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>
@@ -33,7 +33,7 @@
       <div id="tagList" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">首页</a></li>
-          <li><a href="#">关于</a></li>
+          <li><a href="resume.html">关于</a></li>
           <li><a href="test.html">练习</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -45,14 +45,14 @@
                <li><a href="h5.html">2. 表情包生成器</a></li>
                <li><a href="#">3. 个人简历</a></li>
                <li class="divider"></li>
-               <li><a href="#">分离的链接1</a></li>
+               <li class="disabled"><a href="#">分离的链接1</a></li>
                <li class="divider"></li>
-               <li><a href="#">分离的链接2</a></li>
+               <li class="disabled"><a href="#">分离的链接2</a></li>
             </ul>
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">链接</a></li>
+          <li><a href="https://github.com/rubygba">链接</a></li>
         </ul>
       </div>
 
@@ -83,7 +83,7 @@
       <hr>
     </div>
   </div>
-  <!-- 主入口 -->
+  <!-- 轮播 -->
   <div id="myCarousel" class="carousel slide">
    <ol id="carouselBar" class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -93,16 +93,20 @@
    </ol>
    <div class="carousel-inner">
       <div class="item active">
-         <img src="http://placekitten.com/960/300" alt="First slide">
+         <img src="pic/2c.png" alt="First slide">
+         <p>PC端 H5表情包生成器</p>
       </div>
       <div class="item">
-         <img src="http://placekitten.com/960/300" alt="Second slide">
+         <img src="pic/s2.png" alt="Second slide">
+         <p>移动端 H5表情包生成器</p>
       </div>
       <div class="item">
-         <img src="http://placehold.it/960x300" alt="Third slide">
+         <img src="pic/s3.png" alt="Third slide">
+         <p>javaScript DOM操作练习</p>
       </div>
       <div class="item">
-         <img src="http://placehold.it/960x300" alt="4th slide">
+         <img src="pic/s1.jpeg" alt="4th slide">
+         <p>来自placekitten.com的猫咪</p>
       </div>
    </div>
    <!-- 轮播导航 -->
@@ -123,17 +127,17 @@
   <div id="myList" class="row">
     <div class="listItem col-md-4 col-xs-6">
       <a href="#" class="" data-toggle="modal" data-target="#project1">
-      	<img class="img-responsive img-thumbnail" src="pic/1.png" alt="first project">
+      	<img class="img-responsive img-thumbnail" src="pic/1s.jpg" alt="first project">
       </a>
       <h4>UI原型 切图基础</h4>
       <a>http://github.com/..</a>
     </div>
     <div class="listItem col-md-4 col-xs-6">
       <a href="#" class="" data-toggle="modal" data-target="#project2">
-        <img class="img-responsive img-thumbnail" src="pic/2.png" alt="second project">
+        <img class="img-responsive img-thumbnail" src="pic/2a.png" alt="second project">
       </a>
       <h4>H5表情包生成器</h4>
-      <a>http://github.com/..</a>
+      <a href="h5.html">http://rubygba.github.io/h5.html</a>
     </div>
     <div class="listItem col-md-4 col-xs-6">
       <a href="#" class="" data-toggle="modal" data-target="#project3">
