--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <div id="tagList" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">首页</a></li>
+          <li class="disabled"><a href="#">博客</a></li>
           <li><a href="resume.html">关于</a></li>
           <li><a href="test.html">练习</a></li>
           <li class="dropdown">
@@ -158,7 +159,7 @@
         </p>
       </div>
       <div class="col-md-12">
-        <span class="author" itemprop="copyrightHolder">Copyright @2016 | All Right Reserved | GBA</span>
+        <span class="author" itemprop="copyrightHolder">Copyright @2016 | All Rights Reserved | GBA</span>
       </div>
     </div>
   </footer>
