--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <ul class="dropdown-menu">
                <li class="disabled"><a href="#">1. UI原型</a></li>
                <li><a href="h5.html">2. 表情包生成器</a></li>
-               <li><a href="#">3. 个人简历</a></li>
+               <li><a href="phoneApp.html">3. APP原型</a></li>
                <li class="divider"></li>
                <li class="disabled"><a href="#">分离的链接1</a></li>
                <li class="divider"></li>
@@ -93,21 +93,21 @@
       <li data-target="#myCarousel" data-slide-to="3"></li>
    </ol>
    <div class="carousel-inner">
-      <div class="item active">
-         <img src="pic/2c.png" alt="First slide">
-         <p>PC端 H5表情包生成器</p>
+      <div class="item">
+        <img src="pic/s4.png" alt="4th slide">
+        <p>移动端 APP原型</p>
       </div>
       <div class="item">
          <img src="pic/s2.png" alt="Second slide">
          <p>移动端 H5表情包生成器</p>
       </div>
+      <div class="item active">
+        <img src="pic/2c.png" alt="First slide">
+        <p>PC端 H5表情包生成器</p>
+      </div>
       <div class="item">
          <img src="pic/s3.png" alt="Third slide">
          <p>javaScript DOM操作练习</p>
-      </div>
-      <div class="item">
-         <img src="pic/s1.jpeg" alt="4th slide">
-         <p>来自placekitten.com的猫咪</p>
       </div>
    </div>
    <!-- 轮播导航 -->
@@ -142,10 +142,10 @@
     </div>
     <div class="listItem col-md-4 col-xs-6">
       <a href="#" class="" data-toggle="modal" data-target="#project3">
-        <img class="img-responsive img-thumbnail" src="http://placehold.it/300x150" alt="third project">
+        <img class="img-responsive img-thumbnail" src="pic/4a.png" alt="third project">
       </a>
-      <h4>个人简历CV</h4>
-      <a>http://github.com/..</a>
+      <h4>APP原型</h4>
+      <a>http://rubygba.github.io/phoneApp.html</a>
     </div>
   </div>
 
@@ -203,11 +203,11 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title" id="myModal3">333</h4>
+          <h4 class="modal-title" id="myModal3">APP前端实践</h4>
         </div>
         <div class="modal-body">
-          <img class="img-responsive center-block" src="http://placehold.it/300x200">
-          This was my 3 project in this class. I learned a lot about HTML and CSS.
+          <img class="img-responsive center-block" src="pic/4b.jpg">
+          <p>使用HTML5、CSS3制作移动端限定的UI界面。考虑APP的界面结构，并使用动画丰富表现。</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
