alpha0.2 bug fixed
a0.2 fixed

--- a/index.html
+++ b/index.html
@@ -126,12 +126,13 @@
     </div>
   </div>
   <div id="myList" class="row">
+
     <div class="listItem col-md-4 col-xs-6">
-      <a href="#" class="" data-toggle="modal" data-target="#project1">
-      	<img class="img-responsive img-thumbnail" src="pic/1s.jpg" alt="first project">
+      <a href="#" class="" data-toggle="modal" data-target="#project3">
+        <img class="img-responsive img-thumbnail" src="pic/4a.png" alt="third project">
       </a>
-      <h4>UI原型 切图基础</h4>
-      <a>http://github.com/..</a>
+      <h4>APP原型</h4>
+      <a href="phoneApp.html">http://rubygba.github.io/phoneApp.html</a>
     </div>
     <div class="listItem col-md-4 col-xs-6">
       <a href="#" class="" data-toggle="modal" data-target="#project2">
@@ -141,12 +142,13 @@
       <a href="h5.html">http://rubygba.github.io/h5.html</a>
     </div>
     <div class="listItem col-md-4 col-xs-6">
-      <a href="#" class="" data-toggle="modal" data-target="#project3">
-        <img class="img-responsive img-thumbnail" src="pic/4a.png" alt="third project">
+      <a href="#" class="" data-toggle="modal" data-target="#project1">
+      	<img class="img-responsive img-thumbnail" src="pic/1s.jpg" alt="first project">
       </a>
-      <h4>APP原型</h4>
-      <a>http://rubygba.github.io/phoneApp.html</a>
+      <h4>UI原型 切图基础</h4>
+      <a>http://github.com/..</a>
     </div>
+
   </div>
 
   <!-- 页脚 -->
@@ -191,6 +193,7 @@
         <div class="modal-body">
           <img class="img-responsive center-block" src="pic/2b.png">
           <p>使用HTML5的canvas为图片添加文字，支持导出与下载。使用masonry js库，配合Bootstrap实现瀑布流图库布局，提供一些原图。</p>
+          <a href="h5.html">http://rubygba.github.io/h5.html</a>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -208,6 +211,7 @@
         <div class="modal-body">
           <img class="img-responsive center-block" src="pic/4b.jpg">
           <p>使用HTML5、CSS3制作移动端限定的UI界面。考虑APP的界面结构，并使用动画丰富表现。</p>
+          <a href="phoneApp.html">http://rubygba.github.io/phoneApp.html</a>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
