--- a/index.html
+++ b/index.html
@@ -131,21 +131,21 @@
       <a href="#" class="" data-toggle="modal" data-target="#project3">
         <img class="img-responsive img-thumbnail" src="pic/4a.png" alt="third project">
       </a>
-      <h4>APP原型</h4>
+      <h4>WebApp</h4>
       <a href="phoneApp.html">http://rubygba.github.io/phoneApp.html</a>
     </div>
     <div class="listItem col-md-4 col-xs-6">
       <a href="#" class="" data-toggle="modal" data-target="#project2">
         <img class="img-responsive img-thumbnail" src="pic/2a.png" alt="second project">
       </a>
-      <h4>H5表情包生成器</h4>
+      <h4>H5画布</h4>
       <a href="h5.html">http://rubygba.github.io/h5.html</a>
     </div>
     <div class="listItem col-md-4 col-xs-6">
       <a href="#" class="" data-toggle="modal" data-target="#project1">
       	<img class="img-responsive img-thumbnail" src="pic/1s.jpg" alt="first project">
       </a>
-      <h4>UI原型 切图基础</h4>
+      <h4>切图基础</h4>
       <a>http://github.com/..</a>
     </div>
 
