--- a/index.html
+++ b/index.html
@@ -1,27 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title>主页</title>
-    <script src="js/zepto.min.js"></script>
-    <script src="http://s0.qhimg.com/static/c194ef77618ac141/nova_polyfills.1.0.1.js"></script>
-    <script src="http://s1.qhimg.com/static/c70d46df1c829566/nova.1.0.1.js"></script>
-    <script src="http://s2.qhimg.com/static/ea413575de2fdb2c/nova-carousel.1.0.5.js"></script>
+  <meta charset="UTF-8">
+  <title>主页</title>
 </head>
 <body>
 
 blog: Hello World!
-<nova-carousel default-style>
-    <img src="pic/me1.jpg" alt="some pic" draggable="false">
-    <img src="http://placehold.it/600x300" alt="some pic" draggable="false">
-    <img src="http://placehold.it/600x300" alt="some pic" draggable="false">
-</nova-carousel>
+  <img src="http://placehold.it/600x300" alt="some pic" draggable="false">
 
 <script type="text/javascript">
-    var carousel = document.querySelector('nova-carousel');
-    carousel.next();                        // 切换到下一个内容
-    carousel.prev();                        // 切换到上一个内容
-    carousel.autoplay = true;              // 关闭自动轮播
+  window.location.href="./blog?from=home";
 </script>
 </body>
 </html>
