--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ blog: Hello World!
   <img src="http://placehold.it/600x300" alt="some pic" draggable="false">
 
 <script type="text/javascript">
-  window.location.href="./blog?from=home";
+  window.location.href="./blog/";
 </script>
 </body>
 </html>
