--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Bubble Chart</title>
   <script src="js/Chart.bundle.min.js"></script>
-  <style type="text/css" src="css/gb-webstrap"></style>
+  <style type="text/css" src="css/gb-webstrap.css"></style>
   <style type="text/css">
   canvas {
     -moz-user-select: none;
