--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     font-weight: bold;
   }
   hr {
-    margin: 15px auto;
+    margin: 16px auto;
     border: 0;
     border-top: 1px solid #999;
   }
@@ -74,9 +74,9 @@
     /*让模糊背景和canvas一致，基于body绝对定位*/
     position: relative;
     overflow: hidden;
-    width: 360px;
-    height: 360px;
-    padding: 30px;
+    width: 338px;
+    height: 355px;
+    padding: 18px 30px 30px 30px;
     margin: 0 auto;
     border-radius: 5px;
   }
@@ -91,7 +91,7 @@
     z-index: -1;
   }
   .footer {
-    font-family: 'Menlo', 'Consolas', 'Helvetica Neue', Arial, sans-serif;
+    font-family: 'Menlo', 'Consolas', 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
     font-size: 12px;
     letter-spacing: 1px;
   }
