--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 
 <head>
-  <title>Bubble Chart</title>
+  <title>GameBoy.online</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta name="renderer" content="webkit">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=0">
+  <meta name="keywords" content="GBA, gba, blog" data-react-helmet="true">
+  <meta name="description" content="GBA, gba, aboutme" data-react-helmet="true">
+  <meta name="author" content="GBA, Weijian Yao" data-react-helmet="true">
   <meta name="email" content="randyrubyy@gmail.com">
   <script src="js/Chart.bundle.min.js"></script>
   <link rel="stylesheet" href="css/gb-webstrap.css">
@@ -210,7 +217,7 @@
       Chart.plugins.register(simplePlugin);
     }
     else {
-      document.querySelector('.main').style.backgroundColor = 'hsla(0, 0%, 100%, .5)'
+      document.querySelector('.main').style.backgroundColor = 'hsla(0, 0%, 100%, .7)'
     }
 
     // 使用chart.js绘图
