--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="renderer" content="webkit">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=0">
-  <meta name="keywords" content="GBA, gba, blog" data-react-helmet="true">
-  <meta name="description" content="GBA, gba, aboutme" data-react-helmet="true">
-  <meta name="author" content="GBA, Weijian Yao" data-react-helmet="true">
+  <meta name="keywords" content="GBA, gba, blog">
+  <meta name="description" content="GBA, gba, aboutme">
+  <meta name="author" content="GBA, Weijian Yao">
   <meta name="email" content="randyrubyy@gmail.com">
   <script src="js/Chart.bundle.min.js"></script>
   <link rel="stylesheet" href="css/gb-webstrap.css">
@@ -117,7 +117,7 @@
 </head>
 
 <body>
-  <div id="container" style="width: 100%; height: 100%">
+  <div id="container" style="width: 99%; height: 99%">
     <canvas id="canvas"></canvas>
   </div>
   <!-- <button id="randomizeData">Randomize Data</button> -->
