--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
     font-weight: 700;
     font-size: 30px;
+    line-height: 40px;
     letter-spacing: 7px;
     text-transform: uppercase;
     margin: 15px 0;
@@ -53,6 +54,7 @@
     color: #999;
     font-weight: normal;
     font-size: 16px;
+    line-height: 18px;
     /*letter-spacing: .12em;*/
     letter-spacing: 3px;
     margin-bottom: 23px;
@@ -125,7 +127,8 @@
     right: 0;
     bottom: 0;
     left: 0;
-    filter: blur(3px);
+    filter: progid:DXImageTransform.Microsoft.Blur(pixelradius=3);
+    -webkit-filter: blur(3px);
     background: url() 0 / cover fixed;
     /*margin: -10px;*/
     z-index: -2;
