--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   }
   p {
     font-size: 15px;
-    line-height: 1.5em;
+    line-height: 23px;
     margin: 0;
     letter-spacing: 2px;
     margin-bottom: 5px;
@@ -118,6 +118,7 @@
   .footer {
     font-family: 'Menlo', 'Consolas', 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
     font-size: 12px;
+    line-height: 20px;
     letter-spacing: 1px;
     color: #666;
   }
