some bugs with line-height and height

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
   }
   p {
     font-size: 15px;
-    line-height: 23px;
+    height: 23px;
+    line-height: 22px;
     margin: 0;
     letter-spacing: 2px;
     margin-bottom: 5px;
@@ -79,7 +80,7 @@
   .github {
     position: absolute;
     right: 2px;
-    top: 205px;
+    top: 208px;
     width: 33%;
     height: 45px;
     overflow: hidden;
@@ -119,6 +120,8 @@
     font-family: 'Menlo', 'Consolas', 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
     font-size: 12px;
     line-height: 20px;
+    height: 66px;
+    overflow: hidden;
     letter-spacing: 1px;
     color: #666;
   }
